Current:
  * Use C++'s strong typing for more enums.
  * Another big SpeedUp.
  * Tried to simplify the display code
  * Source file names that more closely their current meaning
  * Many bug fixes.
  * Now we pass the canonical locale name to maxima, not the short one.

18.11.2:
  * Better horizontal spacing of cells that are wider than lines

18.11.1:
  * Better horizontal spacing of headings.

18.11.0:
  * GTK3 Compatibility
  * Worked around C compiler bugs that truncated the beginning of long strings
  * Zoom gestures for more computers
  * A better lisp mode
  * Limit cells now can be broken into lines if they are too wide for the window
  * Major performance improvements
  * Several appearance improvements
  * Many additional bug fixes

18.10:
  * Defer any try to change Maxima's configuration until all questions are answered.
  * A menu item that sets the autosubscript feature for the current worksheet.
  * A menu allowing to switch floats to engineering format.
  * Maxima can now pass the values of variables to wxMaxima.
  * Autocompletion for functions from lisp-only packages and for all of maxima's.
    built in functions.
  * A context-sensitive "draw" sidepane.
  * We now allow a packet from Maxima to end in the middle of an unicode codepoint.
  * If the name of a lisp function is known it now is displayed.
  * A right-click menu that copies an animation to the clipboard.
  * A new default value for the current MathJaX release.
  * A "recent packages" menu for packages loaded from load() or from the menu.
  * Advertise the current file and the file's state to the Operating System
  * Copy as Enhanced Metafile (Windows only).
  * Code simplifications.
  * A dockable panel for the debug messages.
  * A more modern theme.
  * Draw: A right-click menu allowing to open images from the current session as
    interactive gnuplot sessions.
  * Migrate the config file to a XDG-compatible location if wxWidgets is new enough
    to support it.